# blight

./: .gitignore  NOTICE  POST_V01.md  README.md  REGENERATE.md  pyproject.toml
src/blight/: __init__.py  cli.py  confidence_filter.py  engine.py  exit_gate.py  findings.py  pipeline_adapter.py  r2.py  scan.py  suppressions.py
src/blight/detectors/: __init__.py  _argregs.py  _common.py  cwe119.py  cwe120.py  cwe122.py  cwe131.py  cwe134.py  cwe191.py  cwe197.py  cwe22.py  cwe242.py  cwe250.py  cwe252.py  cwe295.py  cwe327.py  cwe330.py  cwe362.py  cwe369.py  cwe377.py  cwe401.py  cwe415.py  cwe416.py  cwe426.py  cwe476.py  cwe502.py  cwe676.py  cwe732.py  cwe78.py  cwe798.py  cwe89.py
src/blight/formatters/: __init__.py  sarif.py  text.py
tests/: fake_session.py  test_arch.py  test_cli.py  test_confidence.py  test_confidence_filter.py  test_detectors.py  test_engine.py  test_exit_gate.py  test_integration.py  test_pipeline_adapter.py  test_sarif.py  test_scan.py  test_suppressions.py  test_text.py
tests/fixtures/: Makefile  clean-baseline  clean-baseline.c  creds-vuln  creds-vuln.c  divzero-vuln  divzero-vuln.c  gets-vuln  gets-vuln.c  strcpy-vuln  strcpy-vuln.c  system-vuln  system-vuln.c
